# Demo1

./: .prettierrc  CMakeLists.txt  README.md  package-lock.json  package.json
FSM_files/SpecialCase/: faultFSM.fsm  faultFSM_no_dl2.fsm~
FSM_files/abstracted/: da_v4.fsm  temp5min.fsm
FSM_files/abstracted-typo/: kivl_v3.fsm
Server/: index.js  package-lock.json  package.json
blocking_search/: .project  CMakeLists.txt  CMakeLists.txt~  G12_v2_sorted.fsm  G1_t-tc,G2_t-tc-Blocking.fsm  G1_t-tc,G2_t-tc-blockingEvents.txt  G1_t-tc,G2_t-tc-nonBlocking.fsm  G1_t-tc,G2_t-tc.fsm  G1_t-tc,G2_t-tc_sorted.fsm  blocking-events.txt  blockingEvents-short.txt  blocking_search.kdev4  da_v4,kivl_v3,lkp_v3,lp_v3,retry_v3,subsys3min,temp1trevC,temp2tmin,temp5min,ula_v4-nonBlocking.fsm  da_v4,kivl_v3,lp_v3,retry_v3,temp1trevC,temp2tmin,temp5min,ula_v4,faultFSM_no_dl2,lkp_v3,subsys3min-blockingEvents.txt  division.cpp  log-coacc.txt  t  test  test.txt  test2.txt  transpose.cpp  transpose.cpp~
blocking_search/software/FSM_library/: CMakeLists.txt  CMakeLists.txt~  README
blocking_search/software/FSM_library/ignore/: Event_wrapper.h  Event_wrapper.h~  blocking.cpp  blocking_Data_Structs.h  utilities.h  utilities.h~
blocking_search/software/FSM_library/inc/: DjikstraMemoryManager.h  DjikstraMemoryManager.h~  EventManager.h  EventManager.h~  Event_wrapper.h~  FSMDataStructures.h  FSMDataStructures.h~  HeuristicUtilities.h  HeuristicUtilities.h~  IO_Utilities.h  IO_Utilities.h~  MemoryManager.h  MemoryManager.h~  NewStateCalculator.h~  ParCompUtilities.h  ParCompUtilities.h~  StateEncoder.h  StateEncoder.h~  Utilities.h~
blocking_search/software/FSM_library/src/: DjikstraMemoryManager.cpp  DjikstraMemoryManager.cpp~  EventManager.cpp  EventManager.cpp~  EventManager.h~  Event_wrapper.cpp  Event_wrapper.cpp~  FSMDataStructures.cpp  FSMDataStructures.cpp~  HeuristicUtilities.cpp  HeuristicUtilities.cpp~  IO_Utilities.cpp  IO_Utilities.cpp~  MemoryManager.cpp  MemoryManager.cpp~  ParCompUtilities.cpp  ParCompUtilities.cpp~  StateEncoder.cpp  StateEncoder.cpp~  Utilities.cpp~
blocking_search/software/routines/: CMakeLists.txt  CMakeLists.txt~
blocking_search/software/routines/ignore/: FSMDataStructures.cpp  test2.cpp  test3.cpp  test3.cpp~
blocking_search/software/routines/inc/: FSMDataStructures.h~
blocking_search/software/routines/src/: .blocking.cpp.kate-swp  FSMDataStructures.cpp~  Utilities.cpp~  blocking.cpp  blocking.cpp~  division.cpp  division.cpp~  printParComp.cpp  sortFSM.cpp  sortFSM.cpp~  test.cpp  test.cpp~
public/: index.html
software/FSM_library/: CMakeLists.txt
software/FSM_library/ignore/: Utilities.cpp
software/FSM_library/inc/: DjikstraNode.h  EventManager.h  FSM.h  FSMDataStructures.h  HeuristicUtilities.h  IO_Utilities.h  ParCompUtilities.h  SmartHeap.h  SmartStack.h  TRWSpecialUtilities.h
software/FSM_library/src/: DjikstraMemoryManager.cpp  EventManager.cpp  FSM.cpp  FSMDataStructures.cpp  HeuristicUtilities.cpp  IO_Utilities.cpp  MemoryManager.cpp  ParCompUtilities.cpp  SmartHeap.cpp  SmartStack.cpp  StateEncoder.cpp  TRWSpecialUtilities.cpp
software/routines/: CMakeLists.txt
software/routines/src/: AccParComp.cpp  CompareAutomata.cpp  InvertTransitions.cpp  RawCountBlockingStates.cpp  SmartStackTest.cpp  automated_tests.cpp  blocking.cpp  countBlockingStates.cpp  createSpecialAutomata.cpp  division.cpp  main.cpp  printParComp.cpp  sortFSM.cpp
src/: App.css  App.js  index.css  index.js  store.js
(+208 files in other folders)
